--- a/znfx-main/src/test/resources/application-prod.yml
+++ b/znfx-main/src/test/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/trajectory?serverTimezone=GMT%2b8
-    username: root
-#    password: 1234
+    url: jdbc:mysql://db:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: reader
+    password: 123456
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
@@ -13,20 +13,18 @@ spring:
         login-username: druid
         login-password: druid
   redis:
-    host: localhost # Redis服务器地址
+    host: redis # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
-  data:
-    mongodb:
-#      uri: mongodb://103.46.128.46:14959/znfx
-      uri: mongodb://localhost:27017/Trajectory
 
 logging:
+  file:
+    path: /var/logs
   level:
     root: info
-    cn.njust.label: debug
+    com.macro.mall: info
 
 logstash:
-  host: localhost
+  host: logstash
